--- a/src/views/admin/adminPanel.ejs
+++ b/src/views/admin/adminPanel.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <link href="stylesheets/adminPanel.css" rel="stylesheet">
-    <%- include('./partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
         <title>Panel de Administrador</title>
 </head>
 
