--- a/src/views/productos/productCart.ejs
+++ b/src/views/productos/productCart.ejs
@@ -19,11 +19,11 @@
 <body>
     <header>
         <!--------- BARRA NAVEGADOR CELULAR Y TABLET ---------->
-        <%- include('./partials/headerMobile.ejs') %> 
+        <%- include('../partials/headerMobile.ejs') %> 
 
         <!--------- BARRA NAVEGADOR DESKTOP ---------->
         
-        <%- include('./partials/headerDesktop.ejs') %> 
+        <%- include('../partials/headerDesktop.ejs') %> 
     </header>
 
     <main>
