--- a/src/views/admin/adminPanel.ejs
+++ b/src/views/admin/adminPanel.ejs
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div class="titulo">
-            <img class="logo2" src="https://i.postimg.cc/nzzF4t8f/logo2-negro.jpg" alt="logo2">
+            <img class="logo2" src="https://i.postimg.cc/25MN6P41/logo2-negro-removebg-preview.png" alt="logo2">
             <h1>Reeadni</h1>
         </div>
         <div class="containerBoton">
