--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -142,16 +142,14 @@
         <h1 class="titulo-compra">¿Para Quién Compras?</h1>
         <div class="container-img-genero">
             <div class="container-genero">
-                <img src="https://i.postimg.cc/MG0ZdM6C/hombre1.jpg" alt="hombres">
-                <a href="#">Hombre</a>
+                <a href="#"><img src="https://i.postimg.cc/MG0ZdM6C/hombre1.jpg" alt="hombres">Hombre</a>
             </div>
             <div class="container-genero">
-                <img src="https://i.postimg.cc/ZRTbgb0C/mujer.jpg" alt="mujeres">
-                <a href="#">Mujer</a>
+                <a href="#"><img src="https://i.postimg.cc/ZRTbgb0C/mujer.jpg" alt="mujeres">Mujer</a>
+                
             </div>
             <div class="container-genero">
-                <img src="https://i.postimg.cc/4dBfRDhw/ni-o4.jpg" alt="niños">
-                <a href="#">Niños</a>
+                <a href="#"><img src="https://i.postimg.cc/4dBfRDhw/ni-o4.jpg" alt="niños">Niños</a>                
             </div>
         </div>
     </section>
