--- a/src/views/productos/productEdit.ejs
+++ b/src/views/productos/productEdit.ejs
@@ -1,52 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Producto Readni</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/stylesheets/header.css">
+  <link rel="stylesheet" href=/stylesheets/productCreate.css>
+  <link rel="stylesheet" href=/stylesheets/footer.css>
+  <script src="https://kit.fontawesome.com/60737454c2.js" crossorigin="anonymous"></script>
+  <title>Readni Creacion de producto</title>
 </head>
+
 <body>
-    <h1>Edicion de producto</h1>
-    <div class="container-productEdit">
-			<form action="/products/?_method=PUT" method="POST" enctype="multipart/form-data">
-					<div class="container-nombreProducto">
-						<label for="name" class="form-label">Nombre del producto:</label>
-						<input class="input-name" type="text" id="name" name="name" placeholder="Ej: Zapatillas Reebook, Adidas o Nike" >
-					</div>
-					<div class="container-precioProducto">
-						<label for="price" class="form-label">Precio del producto:</label>
-						<input class="input-price" type="text" id="price" name="price" placeholder="Ej: $ 120.000" >
-					</div>
-					<div class="container-descuento">
-						<label for="discount" class="form-label">Descuento:</label>
-						<input class="input-discount" type="text" id="discount" name="discount" placeholder="Ej: 10%" >
-					</div>
-					<div class="container-categoria">
-						<label for="category" class="form-label">Categoría:</label>
-						<select  class="select-category" name="category" id="category" >
-							<option value="hombre">Hombre</option>
-							<option value="mujer">Mujer</option>
-							<option value="niños" >Niños</option>
-                            <option value="ofertas" >Ofertas</option>
-						</select>
-					</div>
-					<div class="container-description">
-						<label for="description" class="form-label">Descipción:</label>
-						<textarea class="textArea-description" name="description" id="description"></textarea>
-					</div>
-					<div class="container-botonImagen">
-						<label for="image" class="form-label">Imagen</label>
-						<input class="botonImagen" type="file" id="image" name="image">
-					</div>
-					<div class="container-guardarProducto">
-						<button type="submit" class="boton-guardar">Guardar producto</button>
-					</div>
-			</form>
-			<form action="/products/?_method=DELETE" method="POST" >
-				<button type="submit" class="botonEliminar">ELIMINAR</button>
-			</form>
-	</div>
-    
+  <div class="container productCreate">
+    <form method="POST" class="formulario">
+      <div class="container titulo">
+        <h2 class="products-title">Formulario<br> Creación de productos</h2>
+      </div>
+		<div class="row nameProduct">
+			<input type="text" id="titulo" name="titulo" class="formulario__input" value="<%= datos.titulo %>">
+			<label for="titulo" class="formulario__label">Nombre del producto</label>
+		</div>
+		<div class="row description">
+			<label for="descripcion" class="">Descripción:</label>
+			<textarea name="descripcion" id="descripcion" class="formulario__textArea"><%= datos.descripcion %></textarea>
+		</div>
+		<div class="row priceProduct">
+			<input type="precio" id="precio" name="precio" class="formulario__input" value="<%= datos.precio %>">
+			<label for="precio" class="formulario__label">Precio del producto</label>
+		</div>
+		<div class="row discount">
+			<input type="descuento" id="descuento" name="descuento" class="formulario__input" value="<%= datos.descuento %>">
+			<label for="descuento" class="formulario__label">Descuento</label>
+		</div>
+      <div class="row category">
+        <label for="categoria">Categorías</label>
+        <select name="categoria" id="categoria" class="formulario__select">
+          <option value="">-- Selecciona --</option>
+		  <% categorias.forEach(categoria => {%>
+			<option value=<%= categoria.dataValues.id %>><%= categoria.dataValues.nombre %></option>
+		  <% }); %> 
+        </select>
+      </div>
+      <div class="row category">
+        <label for="tallas">Tallas</label>
+        <select name="tallas" id="tallas" class="formulario__select">
+           <option value="">-- Selecciona --</option>
+		   <% tallas.forEach(talla => {%>
+			 <option value=<%= talla.dataValues.id %>><%= talla.dataValues.nombre %></option>
+		   <% }); %> 
+        </select>
+      </div>
+      <div class="row category">
+        <label for="marcas">Marcas</label>
+        <select name="marcas" id="marcas" class="formulario__select">
+          <option value="">-- Selecciona --</option>
+		  <% marcas.forEach(marca => {%>
+			<option value=<%= marca.dataValues.id %>><%= marca.dataValues.nombre %></option>
+		  <% }); %> 
+
+        </select>
+      </div>
+      <div class="button saveProduct">
+        <button type="submit" class="formulario__submit">Guardar cambios</button>
+      </div>
+    </form>
+  </div>
+
+  <script src="/javascripts/productCreate.js"></script>
 </body>
+
 </html>
